SDC-4102. Ship SDC with CMS GC as default (at least for Java7)
Starting changes to detect Java version in SDC script and set GC option

Change-Id: Icb871b388d75093502f5f747e4101d2ff335fac0
Reviewed-on: https://review.streamsets.net/4855
Reviewed-by: Jarcec Cecho <jarcec@streamsets.com>